fixed header & hero stretching

--- a/src/components/hero/Hero.module.css
+++ b/src/components/hero/Hero.module.css
@@ -4,13 +4,13 @@
     flex-direction: column;
     background-image: url(../../../public/hero.png);
     background-size: cover;
+    width: 1440px;
     height: 1084px;
     box-shadow: 0px 1px 1px rgba(180, 114, 27, 0.12), 0px 4px 4px rgba(180, 114, 27, 0.06), 1px 4px 6px rgba(180, 114, 27, 0.16);
 }
 .heroHeader{
     margin: 0;
     padding-top: 300px;
-    padding-left: 100px;
     width: 861px;
     font-family: 'Poppins', sans-serif;
     font-size: 48px;
@@ -28,7 +28,7 @@
 }
 .heroBtn{
     margin-top: 130px;
-    margin-left: 2%;
+    margin-left: 30px;
     width: 160px;
     height: 60px;
     border-radius: 4px;
